moved echo out of resetbinds.cfg into resetbinds alias
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3089 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -201,7 +201,7 @@ menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $a
 menuitem ""
 menuitem "		   [ Reset binds to defaults ]  		" [ showmenu "Are you sure you want to reset binds?" ]
 
-alias resetbinds "exec config/resetbinds.cfg"
+alias resetbinds [exec config/resetbinds.cfg; echo "All binds have been reset to default values."]
 
 newmenu "Are you sure you want to reset binds?"
 
