--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -1,5 +1,5 @@
-// Put default binds here for the "resetbinds"
-// Make sure all binds in keymap/defaults, etc. are reflected in this cfg file.
+// All default binds belong in here.
+// The command "resetbinds" executes this file.
 
 // Do not modify.
 
