--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -5,7 +5,7 @@ alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-gam
 newmenu "In-game"
 
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
+menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" ""
@@ -29,7 +29,7 @@ menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem ""
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
+menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu demo"
