--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -31,8 +31,7 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 
 newmenu settings
-
-menuinit [alias newteam (curteam)]
+	
 menuitem "Video settings"                                         "showmenu video"
 menuitem "Head-Up Display settings"                               "showmenu HUD"
 menuitem "Input controls"                     	           "showmenu controls"
@@ -201,7 +200,7 @@ menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $a
 menuitem ""
 menuitem "		   [ Reset binds to defaults ]  		" [ showmenu "Are you sure you want to reset binds?" ]
 
-alias resetbinds [exec config/resetbinds.cfg; echo "All binds have been reset to default values."]
+alias resetbinds [ exec config/resetbinds.cfg; echo "All binds have been reset to default values!" ]
 
 newmenu "Are you sure you want to reset binds?"
 
@@ -330,10 +329,10 @@ menuitemtextinput "Nickname: " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
-menuitemcheckbox "Non-violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
+menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
-menuitem "Change to the enemy team"        [ if (curteam 1) [ team CLA; echo "You are now on team CLA" ] [ team RVSF; echo "You are now on team RVSF" ] ]
+menuitem "Change to the enemy team"	[ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
 menuitem "Change weapon"        "showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 
