--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -146,7 +146,7 @@ menuitem "------------------""
 menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
 menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
 menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo," ""
-menuitem "drunkenM, www.openfootage.com, Kurt." ""
+menuitem "drunkenM, www.openfootage.com." ""
 menuitem ""
 menuitem "Sound sources"
 menuitem "----------------""
