--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -128,7 +128,7 @@ menuitem "dtd				Hosting." ""
 menuitem "ac_stef				Bug fixes." ""
 menuitem "Grenadier (aurhat)		Small code contributions/fixes." ""
 menuitem "KanslozeClown			Code contributions and advice." ""
-menuitem "										Scroll the list to see more..." ""
+menuitem "" ""
 menuitem "Resources" ""
 menuitem "------------" ""
 menuitem "JCDPC				Laptop mapmodel, textures." ""
@@ -175,7 +175,7 @@ gamemodedesc 0 [1Team Deathmatch: Find the enemy team and destroy them!]
 gamemodedesc 1 [1Co-operative edit: Use this mode to edit maps with others online!]
 gamemodedesc 2 [1Deathmatch: Destroy anything that moves! Everyone for themselves!]
 gamemodedesc 3 [1Survivor: Everyone for themselves! Once you die, you must wait for the round to restart.]
-gamemodedesc 4 [1Team Survivor: Find the team, destory them. Once everyone on the enemy team is gone... repeat!]
+gamemodedesc 4 [1Team Survivor: Find the enemy team, destory them. Once everyone on the enemy team is gone... repeat!]
 gamemodedesc 5 [1Capture the Flag: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
 gamemodedesc 6 [1Pistol Frenzy: Can you make your enemy eat lead with the most simple of weapons?]
 gamemodedesc 7 [1Bot Team Deathmatch: Find the enemy team and destroy them!]
