new default color for mode descriptions
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3095 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -101,7 +101,7 @@ menuitem "-----------------------------------" ""
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." ""
 menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
 menuitem "Flowtron			Universal team member, additional code, admin, community chief." ""
-menuitem "ac_stef				Bug fixes, additional code, server stuff, new modes." ""
+menuitem "stef				Bug fixes, additional code, server stuff, new modes." ""
 menuitem "Toca				Mapmodels, sounds, textures, other stuff."
 menuitem "" ""
 menuitem "Community Mappers" ""
@@ -125,7 +125,6 @@ menuitem "Verbal_				Q&A, advisor, lead tester, pro-coffee service." ""
 menuitem "Rick Helmus			Bot code." ""
 menuitem "absinth				Packaging AssaultCube for Mac." ""
 menuitem "dtd				Hosting." ""
-menuitem "ac_stef				Bug fixes." ""
 menuitem "Grenadier (aurhat)		Small code contributions/fixes." ""
 menuitem "KanslozeClown			Code contributions and advice." ""
 menuitem "" ""
@@ -171,22 +170,22 @@ alias savequit [
 ]
 
 // Game mode descriptions...
-gamemodedesc 0 [1Team Deathmatch: Find the enemy team and destroy them!]
-gamemodedesc 1 [1Co-operative edit: Use this mode to edit maps with others online!]
-gamemodedesc 2 [1Deathmatch: Destroy anything that moves! Everyone for themselves!]
-gamemodedesc 3 [1Survivor: Everyone for themselves! Once you die, you must wait for the round to restart.]
-gamemodedesc 4 [1Team Survivor: Find the enemy team, destory them. Once everyone on the enemy team is gone... repeat!]
-gamemodedesc 5 [1Capture the Flag: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
-gamemodedesc 6 [1Pistol Frenzy: Can you make your enemy eat lead with the most simple of weapons?]
-gamemodedesc 7 [1Bot Team Deathmatch: Find the enemy team and destroy them!]
-gamemodedesc 8 [1Bot Deathmatch: It's every man and A.I for themselves! Dismantle those bots!  ]
-gamemodedesc 9 [1Last Swiss Standing: Knive and bomb the enemy!]
-gamemodedesc 10 [1One Shot, One Kill: You and your opponents start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
-gamemodedesc 11 [1Team One Shot, One Kill: Your team starts with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
-gamemodedesc 12 [1Bot One-Shot, One Kill: You and the bots start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
-gamemodedesc 13 [1Hunt the Flag: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
-gamemodedesc 14 [1Team Keep the Flag: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
-gamemodedesc 15 [1Keep the Flag: Get the flag and keep it. You score one point every 15 seconds. Everybody is will want to destroy you!]
+gamemodedesc 0 [Team Deathmatch: Find the enemy team and destroy them!]
+gamemodedesc 1 [Co-operative edit: Use this mode to edit maps with others online!]
+gamemodedesc 2 [Deathmatch: Destroy anything that moves! Everyone for themselves!]
+gamemodedesc 3 [Survivor: Everyone for themselves! Once you die, you must wait for the round to restart.]
+gamemodedesc 4 [Team Survivor: Find the enemy team, destory them. Once everyone on the enemy team is gone... repeat!]
+gamemodedesc 5 [Capture the Flag: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
+gamemodedesc 6 [Pistol Frenzy: Can you make your enemy eat lead with the most simple of weapons?]
+gamemodedesc 7 [Bot Team Deathmatch: Find the enemy team and destroy them!]
+gamemodedesc 8 [Bot Deathmatch: It's every man and A.I for themselves! Dismantle those bots!  ]
+gamemodedesc 9 [Last Swiss Standing: Knive and bomb the enemy!]
+gamemodedesc 10 [One Shot, One Kill: You and your opponents start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 11 [Team One Shot, One Kill: Your team starts with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 12 [Bot One-Shot, One Kill: You and the bots start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
+gamemodedesc 13 [Hunt the Flag: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
+gamemodedesc 14 [Team Keep the Flag: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
+gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point every 15 seconds. Everybody is will want to destroy you!]
 
 
 // Create additional menus...
