--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -102,7 +102,7 @@ alias delta_edit_5 [ entproperty 0 $arg1 ]
 // ------------------------------
 
 alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-alias delta_spect_0 [ followplayer $arg1 ]
+alias delta_spect_0 [ changefollowplayer $arg1 ]
 
 // alternative weapon switching, no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
 // uncomment lines (remove the //) below to activate
