--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -43,21 +43,24 @@ alias preparebotmatch [
     map $tmp_botmap
 ]
 
+alias afterdisconnect [
+    if $connected [
+        alias mapstartonce $arg1
+        disconnect
+    ] $arg1
+]
+
 // register events and change map
 alias startbotmap [
-	if $connected [
-	    alias mapstartonce [ preparebotmatch ]
-	    disconnect
-	] [
-        preparebotmatch
-    ]
+    afterdisconnect [preparebotmatch]
 ]
 
 
-alias emptymap [ if $connected [ disconnect; alias mapstartonce [ emptymap2 ] ] [ emptymap2 ] ]
-alias emptymap2 [
-	mode 0
-	showmenu maps 
+alias emptymap [
+    afterdisconnect [
+	    mode 0
+	    showmenu maps 
+    ]
 ]
 
 newmenu singleplayer
