--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -84,10 +84,7 @@ mapmodel 3 7 0 0 "toca/radarconsole"		//58
 mapmodel 1 7 0 0 "toca/commrack"		//59
 mapmodel 1 3 0 0 "toca/commrack2"		//60
 mapmodel 1 0 0 0 "toca/powermeter"		//61
-
-//mapmodel 8 1 0 0 "toca/platform16"		//62
-mapmodel 0 0 0 0 "nothing"			//62 -------------
-
+mapmodel 3 6 0 0 "toca/razorwire"		//62
 mapmodel 1 3 0 0 "toca/radioactivedrum"		//63
 mapmodel 1 2 0 0 "toca/radioactivedrum2"	//64
 mapmodel 1 2 0 0 "toca/trashbag"		//65
