tuned demo menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3155 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -5,7 +5,7 @@ newmenu main
 menuitem "Multiplayer"			"showmenu multiplayer"
 menuitem "Singleplayer"			"showmenu singleplayer"
 menuitem "Settings"			"showmenu settings"
-menuitem "Demo"				"showmenu demo"
+menuitem "Demo"				"demomenu"
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
@@ -45,17 +45,28 @@ menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
 
 
-newmenu demo
 
-menuitem "Record demo"              "recorddemo"
-menuitem "Play demo"                [showmenu "play demo"]
-menuitem "Stop recording/playback"  "stopdemo"
-menuitem "List demos"               "listdemos"
-menuitem "Getdemo"                  "getdemo"
+alias demomenu [ if $connected [ showmenu Demo ] [ showmenu "Play demo" ] ] // Decide to show recording or playback menu.
 
 
-newmenu "play demo"
+newmenu Demo // If in-game (playing demos isn't needed)
+
+menuitem "Start recording a demo"	"recorddemo"
+menuitem "Stop recording a demo"	"stopdemo"
+menuitem "Download demos from the server"	[ listdemos; showmenu "Download demo" ] // Lists the demos, then asks which would like to be downloaded.
+
+
+newmenu "Download demo"
+menuinit [ echo "4Choose the demo number you wish to download, as show below in the console." ]
+menuitemtextinput "Demo number:  "	"" "alias dldemo $arg1"
+menuitem "2	  [ Download ]		" "getdemo $dldemo"
+
+
+
+newmenu "Play demo"	// If not in-game (recording/downloading demos isn't needed)
+menuinit [ echo "To stop demo playback, type: 3/stopdemo" ]
 menudirlist "demos/" "dmo" "demo $arg1"
+
 
 
 newmenu about
