added: shelf & treetrunk1 models
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3164 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -167,7 +167,9 @@ mapmodel 0 0 0 0  "toca/backdrop3"		//135
 
 mapmodel 0 0 0 0  "toca/window1"		//136
 mapmodel 0 0 0 0  "toca/barbwire"		//137
-
+mapmodel 0 0 0 0  "toca/shelf"			//138
+mapmodel 0 0 0 0  "toca/guardtower"		//139
+mapmodel 0 0 0 0  "toca/treetrunk1"		//140
 
 
 
