A better "reset binds" setting menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3165 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -4,10 +4,10 @@ menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .p
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
-menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl Weapons weapons/assault/menu mapmodel 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl Weapons weapons/subgun/menu mapmodel 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
-menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
+menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle selected" "chmenumdl Weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun selected" "chmenumdl Weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle selected" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun selected" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
 
 
 newmenu CLA
@@ -38,7 +38,7 @@ menuitem "Input controls"                     	           "showmenu controls"
 menuitem "Sound settings"                                         "showmenu sound"
 menuitem "Gameplay settings"                                 "showmenu gameplay"
 menuitem "" ""
-menuitem "Reset all settings"                          [ showmenu "Reset ALL settings?" ]
+menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
 
 newmenu "QUICK setup"
 
@@ -165,10 +165,11 @@ alias new_sound_quality [
 ]
 
 
-newmenu "Reset ALL settings?"
-
-menuitem "  Yes, reset all settings and restart" "resetcfg 1; quit"
-menuitem "		No, go back!		" "showmenu settings"
+newmenu "Reset settings"
+menuinit [ alias resetyes 0 ] // Ensures this menu works correctly.
+menuitemcheckbox "Yes, reset all settings: " "alias resetyes 1" "alias resetyes $arg1" 
+menuitem "2   	  [ Apply! ]		" [ if $resetyes [ resesresetcfg 1; quit ] [ showmenu "" ] ] [ echo "3If the above option is ticked, AssaultCube will now quit and your settings will be reset." ] //If checkbox is ticked, reset settings and quit, otherwise, close menus.
+	
 
 newmenu controls
 
@@ -198,14 +199,17 @@ menuitem ""
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitem ""
-menuitem "		   [ Reset binds to defaults ]  		" [ showmenu "Are you sure you want to reset binds?" ]
+menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
+
+newmenu "Reset Binds"
+menuinit [ alias resetbindsyes 0 ] // Ensures this menu works correctly.
+menuitemcheckbox "Yes, reset all binds: " "alias resetbindsyes 1" "alias resetbindsyes $arg1" 
+menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
+
+
 
 alias resetbinds [ exec config/resetbinds.cfg; echo "All binds have been reset to default values!" ]
 
-newmenu "Are you sure you want to reset binds?"
-
-menuitem "	 Yes, reset all binds to defaults	" "resetbinds"
-menuitem "		       No   		" "showmenu controls"
 
 newmenu video
 
