new alias "changeteam"
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3166 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -5,7 +5,7 @@ alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-gam
 newmenu "In-game"
 
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
+menuitem "Change to the enemy team"        "changeteam"
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" ""
@@ -29,7 +29,7 @@ menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem ""
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
+menuitem "Change to the enemy team"        "changeteam"
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"demomenu"
@@ -44,7 +44,7 @@ newmenu multiplayer
 menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; showmenu server"
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
-menuitem "Admin connect"		[ showmenu "Admin connect" ]
+menuitem "Connect as Admin"		[ showmenu "Admin connect" ]
 menuitem "
 menuitem "Force serverlist update"	"updatefrommaster 1; showmenu server"
 
