--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -206,9 +206,7 @@ menuinit [ alias resetbindsyes 0 ] // Ensures this menu works correctly.
 menuitemcheckbox "Yes, reset all binds: " "alias resetbindsyes 1" "alias resetbindsyes $arg1" 
 menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
 
-
-
-alias resetbinds [ exec config/resetbinds.cfg; echo "All binds have been reset to default values!" ]
+alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
 
 
 newmenu video
@@ -277,19 +275,19 @@ menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
 menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
 menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
 menuitem "" ""
-menuitem "FPS range..." "showmenu fpsrange"
+menuitem "FPS Range..." [ showmenu "FPS Range" ]
 
 
 menuitem "" ""
-menuitem "2				[ Apply now! ]				" resetgl
+menuitem "2			  [ Apply now! ]				" resetgl
 
-newmenu fpsrange
+newmenu "FPS Range"
 
-menuitem "my 486 0wnz y00 (8-10)"        "fpsrange 8 10"
-menuitem "slow machine (20-25)"          "fpsrange 20 25"
-menuitem "sensible default (30-40)"      "fpsrange 30 40"
-menuitem "fps whore (60-60)"             "fpsrange 60 60"
-menuitem "I don't understand LOD (100+)" "fpsrange 100 1000"
+menuitem "My 486 0wnz y00 	  (8-10 FPS)" "fpsrange 8 10"
+menuitem "Slow machine 		  (20-25 FPS)" "fpsrange 20 25"
+menuitem "Sensible default 	  (30-40 FPS)" "fpsrange 30 40"
+menuitem "FPS whore 		  (60-60 FPS)" "fpsrange 60 60"
+menuitem "I don't understand LOD (100+ FPS)" "fpsrange 100 1000"
 
 newmenu sound
 
@@ -331,15 +329,17 @@ newmenu gameplay
 
 menuitemtextinput "Nickname: " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
+menuitem "Change to the enemy team" "changeteam"
+menuitem "Change weapon"        "showmenu Weapons"
+menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem ""
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
-menuitem "Change to the enemy team"	[ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
-menuitem "Change weapon"        "showmenu Weapons"
-menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 
+alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
 
 newmenu HUD
 
