non-execute mitem sample
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3169 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -343,7 +343,7 @@ alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CL
 
 newmenu HUD
 
-menuitem "Show:" ""
+menuitem "Show:" -1
 menuitemcheckbox "   Stats " "(= $hidestats 0)" "hidestats (= $arg1 0)"
 menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
