added clip entities for easier clipping added entset command for easier ent editing revised command completion system
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3182 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -1,3 +1,18 @@
+// standard completions
+
+alias mapcomplete [complete $arg1 "packages/maps" cgz]
+
+mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf"
+loop i (listlen $mapcommands) [
+    mapcomplete (at $mapcommands $i)
+]
+
+complete demo "demos" dmo
+
+alias entcomplete [listcomplete $arg1 "light playerstart clips ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
+
+entcomplete newent
+
 // standard menu definitions
 
 newmenu main
