--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -1,3 +1,10 @@
+alias editent [
+    alias enttype (getenttype)
+    if (! (strcmp enttype "")) [
+        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
+    ]
+]
+
 newmenu editing
 
 menuitem "Mapmodels..."				"showmenu Mapmodels"
