--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -40,7 +40,7 @@ bind 7 ""
 bind 8 "vdelta -1"
 bind 9 "vdelta 1"
 bind COLON ""
-bind SEMICOLON ""
+bind SEMICOLON "editent"
 bind LESS ""
 bind EQUALS ""
 bind GREATER ""
