--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -170,9 +170,9 @@ mapmodel 0 0 0 0  "toca/barbwire"		//137
 mapmodel 0 0 0 0  "toca/shelf"			//138
 mapmodel 4 1 15 0  "toca/guardtower"		//139
 mapmodel 0 2 0 0  "toca/treetrunk1"		//140
-// guardtower clip sides with # 77 16 height
-mapmodel 1 15 0 0 "nothing"			//141 guardtower stair clipping
-mapmodel 1 20 0 0 "nothing"			//142 guardtower beam clipping
+
+mapmodel 0 2 0 0 "nothing"			//141 ------test clip
+mapmodel 1 2 0 0 "nothing"			//142 ------test clip
 
 
 
