--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -13,6 +13,13 @@ alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
 alias grenades [ weapon 6 ]
 
+// "resetbinds" command.
+alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
+
+// "changeteam" command.
+alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
+
+
 //for alternative weapon binding (more economic) see the end of this file
 
 lighterror 4 //set higher (for example 8) if you experience slowdown
